# sdl-cmake-template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
